--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   google_sign_in: ^6.2.1
   native_video_player: ^1.3.1
+  scroll_snap_list: ^0.9.1
   video_player: ^2.8.5
 
 dev_dependencies:
@@ -24,3 +25,4 @@ flutter:
   assets:
     - assets/videos/
     - assets/images/
+ 
