--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,30 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+           <!-- Provide required visibility configuration for API level 30 and above -->
+ <!-- Intent filter for SMS -->
+    <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="sms" />
+    </intent-filter>
+
+    <!-- Intent filter for phone call -->
+    <intent-filter>
+        <action android:name="android.intent.action.DIAL" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <data android:scheme="tel" />
+    </intent-filter>
+
+    <!-- Custom intent filter -->
+    <intent-filter>
+        <action android:name="com.example.customaction" />
+        <category android:name="android.intent.category.DEFAULT" />
+    </intent-filter>
+
+ 
+
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
