--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   scroll_snap_list: ^0.9.1
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
+  url_launcher: ^6.2.6
   video_player: ^2.8.5
 
 dev_dependencies:
